fix: posts lists spacing

--- a/app/archive/components/posts-list/posts-list.module.scss
+++ b/app/archive/components/posts-list/posts-list.module.scss
@@ -5,7 +5,7 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    gap: calc(utilities.$line-height * 2);
+    gap: calc(utilities.$line-height * 3);
 
     .group {
         display: flex;
@@ -27,7 +27,7 @@
     justify-content: space-between;
     width: 100%;
     height: utilities.$line-height;
-    margin-bottom: calc(utilities.$line-height * 4);
+    margin-bottom: calc(utilities.$line-height * 3);
 
     & {
         > div:first-of-type {
